@@ -1,6 +1,7 @@
 46
 ================
 
+01/11/22 Disable TinyMCE context menu so browser cut/copy/paste can be used
 01/11/22 adoptable_js: filters for goodwith and where #1097
 01/11/22 Sort person flags column before storing
 30/10/22 Support CTE/WITH syntax for reports and in SQL Interface
